--- a/generators/entity-client/templates/angular/src/test/javascript/spec/app/entities/entity-management.component.spec.ts.ejs
+++ b/generators/entity-client/templates/angular/src/test/javascript/spec/app/entities/entity-management.component.spec.ts.ejs
@@ -66,7 +66,7 @@ describe('Component Tests', () => {
             service = fixture.debugElement.injector.get(<%= entityAngularName %>Service);
         });
 
-        it('Should call load all on init', () => {
+        it('Should call load all on ngAfterViewInit', () => {
             // GIVEN
             const headers = new HttpHeaders().append('link', 'link;link');
             spyOn(service, 'query').and.returnValue(of(new HttpResponse({
@@ -75,7 +75,7 @@ describe('Component Tests', () => {
             })));
 
             // WHEN
-            comp.ngOnInit();
+            comp.ngAfterViewInit();
 
             // THEN
             expect(service.query).toHaveBeenCalled();
