--- a/generators/entity-client/templates/angular/src/main/webapp/app/entities/pagination-template.ejs
+++ b/generators/entity-client/templates/angular/src/main/webapp/app/entities/pagination-template.ejs
@@ -50,6 +50,7 @@
     constructor(
         protected <%= entityInstance %>Service: <%= entityAngularName %>Service,
         protected parseLinks: JhiParseLinks,
+        protected jhiAlertService: JhiAlertService,
         protected activatedRoute: ActivatedRoute,
         <%_ if (fieldsContainBlob) { _%>
         protected dataUtils: JhiDataUtils,
