--- a/generators/entity-client/templates/angular/src/main/webapp/app/entities/entity-management-detail.component.html.ejs
+++ b/generators/entity-client/templates/angular/src/main/webapp/app/entities/entity-management-detail.component.html.ejs
@@ -16,11 +16,35 @@
  See the License for the specific language governing permissions and
  limitations under the License.
 -%>
-<div class="row justify-content-center">
-    <div class="col-8">
-        <div *ngIf="<%= entityInstance %>">
+<div class="page-layout simple fullwidth inner-sidebar">
+    <!-- HEADER -->
+    <div class="header accent p-24 h-160" fxLayout="row" fxLayoutAlign="center center" fxLayout.gt-xs="row"
+         fxLayoutAlign.gt-xs="space-between center">
+
+        <div fxLayout="column" fxLayoutAlign="center center">
+            <div fxLayout="row" fxLayoutAlign="start center">
+                <a routerLink="/">
+                    <mat-icon class="secondary-text s-18">home</mat-icon>
+                </a>
+                <mat-icon class="secondary-text s-16">chevron_right</mat-icon>
+                <span class="secondary-text"
+                      jhiTranslate="<%= i18nKeyPrefix %>.home.title"><%= entityClassPluralHumanized %></span>
+            </div>
+            <ng-container *ngIf="<%= entityInstance %>">
+                <div class="h2 mt-16"><span
+                            jhiTranslate="<%= i18nKeyPrefix %>.detail.title"><%= entityClassHumanized %></span>
+                    {{<%= entityInstance %>.id}}
+                </div>
+            </ng-container>
+        </div>
+    </div>
+    <!-- / HEADER -->
+
+    <!-- CONTENT -->
+    <div class="content p-24">
+        <ng-container *ngIf="<%= entityInstance %>">
             <h2><span jhiTranslate="<%= i18nKeyPrefix %>.detail.title"><%= entityClassHumanized %></span> {{<%= entityInstance %>.id}}</h2>
-            <h2>Angular Material version <h2>
+            <h2>Angular Material version </h2>
             <hr>
             <<%= jhiPrefixDashed %>-alert-error></<%= jhiPrefixDashed %>-alert-error>
             <dl class="row-md jh-entity-details">
@@ -112,6 +136,7 @@
                 <fa-icon [icon]="'pencil-alt'"></fa-icon>&nbsp;<span jhiTranslate="entity.action.edit"> Edit</span>
             </button>
             <%_ } _%>
-        </div>
+        </ng-container>
     </div>
+    <!-- / CONTENT -->
 </div>
